--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Homework for Hire in Canada</title>
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WN80FKK7JN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WN80FKK7JN');
+</script>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -13,6 +23,43 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   
+
+  <meta name="description" content="Homework for Hire is a reliable, fast, and robust platform for all your homework needs. Our platform is easy to use and powered by LiteSpeed, making it fast and efficient." />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Get Expert Homework Help Online | Homework for Hire" />
+<meta property="og:description" content="Homework for Hire is a reliable, fast, and robust platform for all your homework needs. Our platform is easy to use and powered by LiteSpeed, making it fast and efficient." />
+<meta property="og:url" content="https://homework4hire.herokuapp.com/" />
+<meta property="og:site_name" content="Homework for Hire: Expert Homework Help Online" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Get Expert Homework Help Online | Homework for Hire" />
+<meta name="twitter:description" content="Homework for Hire is a reliable, fast, and robust platform for all your homework needs. Our platform is easy to use and powered by LiteSpeed, making it fast and efficient." />
+<meta name="twitter:image" content="https://homework4hire.herokuapp.com/static/brand/banner_logo.png" />
+<meta name="theme-color" content="#ee5b3e" />
+<meta name="robots" content="index,follow">
+<meta name="keywords" content="homework solutions, Canada homework help, online homework help, expert homework help, student homework help, academic homework help, tutoring services, assignment writing, Canada assignment help, online assignment help, research paper writing, Canada research help, thesis writing, code writing, Canada coding help, math homework help, science homework help, statistics homework help, physics homework help, programming homework help, Canada programming help, economics homework help, business homework help, accounting homework help, engineering homework help, Canada engineering help, English homework help, Canada English help, history homework help, Canada history help, geography homework help, Canada geography help, top homework help, affordable homework help, reliable homework help, quality homework help, fast homework help, efficient homework help, homework help near me, Canada homework experts, professional homework help, Canada professional help, trusted homework help, Canada trusted help, custom homework help, Canada custom help, one-to-one homework help, Canada one-to-one help, online tutoring, Canada online tutoring, experienced tutors, Canada experienced tutors, best tutors, Canada best tutors, certified tutors, Canada certified tutors, affordable tutoring, Canada affordable tutoring, professional tutors, Canada professional tutors, online writing services, Canada online writing services, professional writing services, Canada professional writing services, affordable writing services, Canada affordable writing services, best writing services, Canada best writing services,
+homework help for University of Toronto, homework help for U of T, homework help in Ontario, homework help in Toronto, homework help for McGill University, homework help for McGill, homework help in Montreal, homework help in Quebec, homework help for University of British Columbia, homework help for UBC, homework help in British Columbia, homework help in Vancouver, homework help for Simon Fraser University, homework help for SFU, homework help in Burnaby, homework help in Alberta, homework help for University of Alberta, homework help for UAlberta, homework help in Edmonton, homework help for University of Calgary, homework help for UCalgary, homework help in Calgary, homework help for Dalhousie University, homework help for Dal, homework help in Halifax, homework help in Nova Scotia, homework help for University of Ottawa, homework help for UOttawa, homework help in Ottawa, homework help in Ontario, homework help for University of Waterloo, homework help for UW, homework help in Waterloo, homework help in Ontario, homework help for Western University, homework help for Western, homework help in London, homework help in Ontario, 
+, university-specific homework help, University of Toronto homework help, UBC homework help, McGill homework help, York University homework help, Ryerson University homework help, Simon Fraser University homework help, Western University homework help, Ontario homework help, British Columbia homework help, Quebec homework help, Alberta homework help, Manitoba homework help, Saskatchewan homework help, Nova Scotia homework help, New Brunswick homework help, Newfoundland and Labrador homework help, Prince Edward Island homework help, state-specific homework help, Toronto homework help, Vancouver homework help, Montreal homework help, Ottawa homework help, Calgary homework help, Edmonton homework help, Winnipeg homework help, Regina homework help, Halifax homework help, St. John's homework help, Charlottetown homework help">
+
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://homework4hire.herokuapp.com/",
+        "name": "Homework for Hire: Expert Homework Help Online",
+        "potentialAction": { "@type": "SearchAction", "target": "https://homework4hire.herokuapp.com/search/{search_term_string}/", "query-input": "required name=search_term_string" }
+    }
+</script>
+<script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://homework4hire.herokuapp.com/",
+        "name": "Homework for Hire: Expert Homework Help Online",
+        "logo": "https://homework4hire.herokuapp.com/static/homework4hire-logo.png"
+    }
+</script>
+
 </head>
 <body>
   <header>
