--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,7 @@ homework help for University of Toronto, homework help for U of T, homework help
       <div class="container text-center">
         <h1 class="display-4 fade-in">Get Homework Help in Canada</h1>
         <p class="lead">We offer professional help for students in Canada</p>
-        <a href="mail
-        to:libraula@gmail.com" class="btn btn-primary btn-lg">Contact Us</a>
+        <a href="mailto:libraula@gmail.com" class="btn btn-primary btn-lg">Contact Us</a>
     </div>
     </div>
 
